# Ollama_CrewAi

./: INSTALL.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: agents.yaml  supervised_example.yaml  trail_training_site.yaml
docs/: extension.md  tutorial.md
examples/: custom_agent.py
src/: cli.py  main.py
src/agents/: __init__.py  base.py  developer.py  manager.py  message.py  planner.py  researcher.py  tester.py  writer.py
src/config/: schema.py
src/core/: __init__.py  bus.py  logging.py  policies.py  storage.py  task.py
src/supervisor/: __init__.py  interface.py
tests/: test_agents_base.py  test_bus_supervisor.py  test_cli.py  test_config_schema.py  test_developer_agent.py  test_full_team.py  test_logging.py  test_main.py  test_main_async.py  test_manager_agent.py  test_manager_error_handling.py  test_manager_storage.py  test_plan_approval.py  test_planner_agent.py  test_policy_enforcement.py  test_project_resume.py  test_project_workflow.py  test_researcher_agent.py  test_storage.py  test_supervisor_interface.py  test_task_flow.py  test_tester_agent.py  test_writer_agent.py
