[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-crewai"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    # Agent framework dependencies
    "crewai",
    "pydantic",
    "aiohttp",
    "openai",
    "litellm",
    "ollama",
]

[project.scripts]
ollama-crewai = "main:main"
ollama-crewai-agents = "cli:main"

[tool.setuptools]
packages = ["agents", "core"]
py-modules = ["main", "cli"]
package-dir = {"" = "src"}
